<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bonuses"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/there_are_3_bonuses"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:paddingRight="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView11"
                    android:src="@drawable/extrasense" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/extrasense"
                    android:id="@+id/textView12"
                    android:layout_alignLeft="@+id/imageView11"
                    android:layout_alignRight="@+id/imageView11"
                    android:gravity="center_horizontal"
                    android:background="#a8707070"
                    android:textColor="#ffffff"
                    android:singleLine="true"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView13"
                    android:src="@drawable/froze" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/frozing"
                    android:id="@+id/textView14"
                    android:layout_alignLeft="@+id/imageView13"
                    android:layout_alignRight="@+id/imageView13"
                    android:gravity="center_horizontal"
                    android:background="#a8707070"
                    android:textColor="#ffffff"
                    android:singleLine="true"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:paddingRight="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView12"
                    android:src="@drawable/teleport" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/teleport"
                    android:id="@+id/textView13"
                    android:layout_alignLeft="@+id/imageView12"
                    android:layout_alignRight="@+id/imageView12"
                    android:gravity="center_horizontal"
                    android:background="#a8707070"
                    android:textColor="#ffffff"
                    android:singleLine="true"
                    android:textSize="13sp" />
            </RelativeLayout>
        </TableRow>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/available_in_shop"
        android:id="@+id/textView15"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tap_to_activate"
        android:id="@+id/textView18"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />
</LinearLayout>