<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FinishActivity"
    android:id="@+id/root"

    style="@style/LayoutStyle">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <hakito.trycatch.Views.ParticleView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/particle_view" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/tableRow4"
        android:layout_below="@+id/frame_bonuses">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/bReset"
            style="@style/ButtonStyle.Minor"
            android:textSize="25sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/bNext"
            style="@style/ButtonStyle.Big"
            android:textSize="25sp" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hint_unsufficient_stars"
        android:id="@+id/text_finish_hint"
        android:layout_below="@+id/tableRow4"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:gravity="center_horizontal"
        android:padding="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop"
        android:id="@+id/button_shop"
        style="@style/ButtonStyle.Minor"
        android:layout_margin="16dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frame_bonuses"
        android:layout_marginTop="120dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lay_result"
            tools:visibility="gone"
            >

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_marginTop="10dp"
                android:numStars="5"
                android:layout_centerHorizontal="true"
                android:rating="3.5"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tResult"
                android:layout_below="@+id/ratingBar"
                android:layout_centerHorizontal="true"
                android:text="@string/congrat"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:typeface="monospace" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tResult"
                android:paddingLeft="16dp"
                android:id="@+id/linearLayout">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="12 steps"
                        android:id="@+id/tSteps"
                        tools:ignore="HardcodedText" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="02:16"
                        android:id="@+id/tTime"
                        tools:ignore="HardcodedText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="3/5"
                        android:id="@+id/tCoins"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:id="@+id/imageView6"
                        android:background="@drawable/coin"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="4dp" />
                </TableRow>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lay_loose"
            android:visibility="gone"
            tools:visibility="visible"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_failed"
                android:id="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:textColor="#e57373"
                android:textSize="28sp" />
        </RelativeLayout>
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\?"
        android:id="@+id/button_help"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        style="@style/ButtonStyle.Minor"
        android:minWidth="40dp" />


</RelativeLayout>
